--- a/datos-pokemon.html
+++ b/datos-pokemon.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>| Pokédex</title>
     <link rel="stylesheet" type="text/css" href="css/estilosInfo.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/buttonsStyle.css">
@@ -18,14 +18,14 @@
             <li class="nav__items">
                 <a href="index.html" class="nav__links">
                     <span class="fill"></span>
-                    <span class="title PrincipalPage">Principal Page</span>
+                    <span class="title mainPage">Main Page</span>
                 </a>
             </li>
 
             <li class="nav__items">
                 <a href="#footer" class="nav__links">
                     <span class="fill"></span>
-                    <span class="title AboutUs">About Us</span>
+                    <span class="title aboutUs">About Us</span>
                 </a>
             </li>
         </ul>
@@ -70,7 +70,7 @@
                 
                 <ul class="nav__link nav__link--footer">
                     <li class="nav__items">
-                        <a href="#" class="nav__links">Inicio</a>
+                        <a href="#" class="nav__links">Home</a>
                     </li>
                 </ul>
             </nav>
