--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
     </section>
 
     <div class="searchbar" id="searchbar">
-                <input data-type="name" type="text" id="searchInput" class="button-white-tt-input" autocomplete="off" spellcheck="false" dir="auto">
-                <img src="img/searchIcon.svg" alt="" class="buttonSearch" id="buttonSearch">
+        <p>Name or Number</p>
+        <div class="pokedex-search-input-items">
+            <input data-type="name" type="text" id="searchInput" class="button-white-tt-input" autocomplete="off" spellcheck="false" dir="auto">
+            <img src="img/searchIcon.svg" alt="" class="buttonSearch" id="buttonSearch">
+        </div>
     </div>
 
     <section class="pokedex filter">
