--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             <article class="pokedex-filter-padding" id="pokedex-filter-padding">
                 <div class="pokedex-filter-results" id="pokedex-filter-results">
-                    <h3 alt="?" class="pokedex-filter-name" style="color: black;">FILTER
+                    <h3 alt="?" class="pokedex-filter-name" style="color: black;">Filter
                         <span class="pokedex-filter-arrow">
                             <img src="./img/arrow.svg" alt="arrow" class="pokedex-filter-img">
                         </span>
