--- a/index.html
+++ b/index.html
@@ -236,6 +236,10 @@
     </section>
 
     <main>
+        <div class="loader__container" id="loader__container">
+            <!-- <div class="loader"></div> -->
+        </div>
+
         <div class="pokemonList" id="pokemonList"></div>
 
         <div class="buttons" id="buttons"></div>
